开发模型对话接口